landscap mobile text overlapping solved

--- a/pages/users/users.css
+++ b/pages/users/users.css
@@ -223,7 +223,7 @@
 
 @media screen and (max-height: 450px) {
   .videos {
-    padding-top: 8rem;
+    padding-top: 10rem;
   }
 
   .st-hero {
